--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-  background: url('/assets/background.png') center;
+  background: url('/freeCards/assets/background.png') center;
   background-size: cover;
   margin: 0 auto;
   text-align: center;
