--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -295,6 +295,25 @@ body {
         }
       }
 
+      .backdrop {
+        background: linear-gradient(to right, rgba(#130D23, 0), rgba(#130D23, .5), rgba(#130D23, 0));
+        position: absolute;
+        width: 800px;
+        height: 400px;
+        bottom: 60px;
+        left: -300px;
+        right: 0;
+        z-index: -1;
+        &:after {
+          background: linear-gradient(to right, rgba(#9797FB, 0), #9797FB, rgba(#9797FB, 0));
+          content: '';
+          display: block;
+          width: 100%;
+          height: 2px;
+          bottom: 0;
+          position: absolute;
+        }
+      }
     }
   }
 
