--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -275,13 +275,15 @@ body {
           width: 190px;
           text-align: left;
           font-size: 12px;
-          margin-top: 20px;
+          margin: 0;
+          line-height: 1.3em;
 
           .mechanics {
-            margin-bottom: 9px;
+            margin: 8px 0;
           }
 
           .flavor {
+            margin: 8px 0;
             font-family: $font-primary;
             font-style: italic;
             opacity: 0.7;
