--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -5,7 +5,7 @@ $font-secondary: 'Baloo', sans-serif;
 html, body {
   padding: 0;
   margin: 0;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 body {
@@ -25,7 +25,6 @@ body {
 
 .container {
   flex-grow: 1;
-  padding-bottom: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -115,7 +114,7 @@ body {
           top: -25px;
           left: -26px;
           width: 236px;
-          height: 364px;
+          height: 300px;
           background-size: 100%;
           background: url("/freeCards/assets/blue-rarity-border.png") no-repeat;
         }
@@ -124,7 +123,7 @@ body {
           top: -19px;
           left: -23px;
           width: 236px;
-          height: 364px;
+          height: 300px;
           background-size: 100%;
           transform: scale(1.03);
           background: url("/freeCards/assets/gold-rarity-border.png") no-repeat;
@@ -134,7 +133,7 @@ body {
           top: -22px;
           left: -24px;
           width: 343px;
-          height: 364px;
+          height: 300px;
           background-size: cover;
           transform: scale(1.02);
           background: url("/freeCards/assets/purple-rarity-border.png") no-repeat;
@@ -321,6 +320,7 @@ body {
 
 
   &.error {
+    padding-bottom: 100px;
     h1 {
       margin: 10px auto 0;
     }
