--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -19,7 +19,6 @@ body {
 }
 
 .logo {
-  display: block;
   margin: 20px auto;
 }
 
@@ -293,6 +292,7 @@ body {
           text-align: left;
           font-size: 14px;
           padding-left: 2px;
+          margin: 8px 0;
         }
       }
 
